# google_sheets_driver

./: Cargo.toml  LICENSE.md  README.md  ideas.md
src/: halavich_utils_helpers.rs  lib.rs  mapper.rs  spread_sheet_driver.rs
src/mapper/: mod.rs  sheet_cell.rs  sheet_row.rs
src/orm/: mod.rs
src/types/: a1_cell_id.rs  cell_id.rs  conversions.rs  entity.rs  letters.rs  mod.rs  sheet_date.rs  typed_options.rs
src/types/cell/: a1_cell_id.rs  conversions.rs  mod.rs  num_cell_id.rs
src/types/cell_id/: a1_cell_id.rs  conversions.rs  mod.rs
src/types/range/: a1_range.rs  conversion.rs  mod.rs  num_range.rs
