[package]
name = "google_sheets_driver"
description = "google-sheets4 wrapper providing more convenient but narrover functionality to use GS as persistent storage. Includes fake ORM"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
error-stack = "0.5.0"
google-sheets4 = "5.0.5"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.1"
derive_more = { version = "2.0.1" , features = ["display", "deref", "from", "from_str"]}
