[package]
name = "google_sheets_driver"
description = "google-sheets4 wrapper providing more convenient but narrover functionality to use GS as persistent storage. Includes fake ORM"
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
tokio = "1.44.1"
google-sheets4 = "5.0.5"

tracing = "0.1.41"
error-stack = "0.5.0"
thiserror = "2.0.12"
derive_more = { version = "2.0.1" , features = ["display", "deref", "from", "from_str"]}

serde_json = "1.0.140"

### Own libraries ###
#huh = {path = "../huh"}
huh = { git = "https://github.com/halavich/huh.git", branch = "master" }
